adjust issue cert UI
